# rag_project

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/: dependencies.py  routes.py
app/api/v1/: chat.py  documents.py
app/core/: config.py
app/db/: session.py
app/models/: booking.py  document.py
app/rag/: pipeline.py  vector_store.py
app/schemas/: chat.py  document.py
app/services/: booking.py  chunking.py  embeddings.py  ingestion.py  memory.py  text_extractor.py
tests/: test_chunking.py
