[project]
name = "palm-mind-rag-api"
version = "0.1.0"
description = "FastAPI document ingestion and conversational RAG backend"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
